--- a/index.html
+++ b/index.html
@@ -1,13 +1,55 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CHANGE ME</title>
+    <title>Fun, Funny, And Funnier</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
+      <nav>
+        <h1>Fun, Funny, Funnier</h1>
+      <ul id="nav-ul">
+     <li class="nav-li">
+  <a href="index.html">Home</a>
+     </li>
+   <li class="nav-li">
+     <a href="portfolio.html">Portfolio</a>
+    </li>
+</ul> 
+</nav>
+
+      <main>
+<div class="sidebar"> 
+
+<img class="sidebar-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSgpbMkjZRWNlFbH68woNlZooKSKpBu5eCEZg&s">
+
+</div>
+<div class="content">
+<h2>Bryce Williams aka BMW</h2>
+<p>Student at St. Amant. High School</p>
+
+<div id="interests">
+
+<h3>Interests</h3>
+<ul>
+  <li>Being funny</li>
+  <li>Sports</li>
+  <li>SUMMER</li>
+  </ul>
+
+
+
+</div>
+
+</div>
+      
+</main>
       
     </div>
   </body>
 </html>
+git add . 
+git commit -m "Mark 2"
+git push
