--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 </div>
 <div class="content">
-<h2>Bryce Williams aka BMW</h2>
+<h2>Bryce Williams</h2>
 <p>Student at St. Amant. High School</p>
 
 <div id="interests">
