--- a/fan-index.html
+++ b/fan-index.html
@@ -18,6 +18,9 @@
    <li class="nav-li">
      <a href="fan-page2.html">Fan Page 2</a>
     </li>
+    <li class="nav-ul">
+      <a href="portfolio.html"> Portfolio</a>
+    </li>
 </ul> 
 </nav>
 
@@ -29,7 +32,7 @@
 </div>
 <div class="content">
 <h2>All the about Ant-Man </h2>
-<p></p>
+<p>Anthony Edwards, nicknamed "Ant-Man", is an American professional basketball player for the Minnesota Timberwolves. He was the first overall pick in the 2020 NBA draft and has quickly become a rising star in the league. Edwards is known for his explosive athleticism, powerful dunks, and strong scoring ability, as well as his charismatic personality and confidence. He has been named an NBA All-Star three times and is considered a key player in the Timberwolves' recent playoff success. </p>
 
 <div id="interests">
 
