--- a/fan-index.html
+++ b/fan-index.html
@@ -27,21 +27,23 @@
       <main>
 <div class="sidebar"> 
 
-<img class="sidebar-img" src="https://cdnph.upi.com/sv/ph/og/upi_com/5401740748437/2025/1/ed4a7282dc827554946c30d353a3a736/v1.5/Timberwolves-Anthony-Edwards-picks-up-16th-technical-faces-1-game-ban.jpg">
-
+<iframe  loop="" width="199" height="134" src="https://www.youtube.com/embed/rWScxbJkO2o" title="Anthony Edwards - EVIL J0RDAN [NBA Edit] [4K]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"
 </div>
-<div class="content">
+</div>
+<div class="Ant">
 <h2>All the about Ant-Man </h2>
 <p>Anthony Edwards, nicknamed "Ant-Man", is an American professional basketball player for the Minnesota Timberwolves. He was the first overall pick in the 2020 NBA draft and has quickly become a rising star in the league. Edwards is known for his explosive athleticism, powerful dunks, and strong scoring ability, as well as his charismatic personality and confidence. He has been named an NBA All-Star three times and is considered a key player in the Timberwolves' recent playoff success. </p>
 
-<div id="interests">
+<div id="interest">
 
 <h3> Ant-Man info</h3>
 <ul>
-  <li>Being funny</li>
-  <li>Sports</li>
-  <li>SUMMER</li>
-  </ul>
+  <li>Edwards was born in Atlanta, Georgia, and initially excelled in football as a running back. He later shifted his focus to basketball, becoming a highly touted prospect. </li>
+  <li>He played one season at the University of Georgia, where his performance solidified his status as a top draft prospect. </li>
+  <li>Drafted first overall by the Timberwolves in 2020, Edwards has quickly developed into a leading player. He is known for his highlight-reel dunks, scoring prowess, and improving all-around game. </li>
+  <li>He's known for his explosive athleticism, powerful dunks, and scoring ability. He's often compared to Dwyane Wade for his playing style. </li>
+
+</ul>
 
 
 
