finalized platformer game

--- a/fan-index.html
+++ b/fan-index.html
@@ -27,9 +27,9 @@
       <main>
 <div class="sidebar"> 
 
-<iframe  loop="" width="199" height="134" src="https://www.youtube.com/embed/rWScxbJkO2o" title="Anthony Edwards - EVIL J0RDAN [NBA Edit] [4K]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"
+<iframe  loop="" width="199" height="134" src="https://www.youtube.com/embed/rWScxbJkO2o" title="Anthony Edwards - EVIL J0RDAN [NBA Edit] [4K]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
-</div>
+
 <div class="Ant">
 <h2>All the about Ant-Man </h2>
 <p>Anthony Edwards, nicknamed "Ant-Man", is an American professional basketball player for the Minnesota Timberwolves. He was the first overall pick in the 2020 NBA draft and has quickly become a rising star in the league. Edwards is known for his explosive athleticism, powerful dunks, and strong scoring ability, as well as his charismatic personality and confidence. He has been named an NBA All-Star three times and is considered a key player in the Timberwolves' recent playoff success. </p>
