--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Fun, Funny, And Funnier</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Fun, Funny, AND Funnier</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
       <nav>
-        <h1>Fun, Funny, Funnier</h1>
+        <h1>Fun, Funny, & Funnier</h1>
       <ul id="nav-ul">
      <li class="nav-li">
   <a href="index.html">Home</a>
